--- a/Changes
+++ b/Changes
@@ -6,6 +6,10 @@ Home page:    <https://metacpan.org/release/MooX-ClassAttribute>
 Bug tracker:  <http://rt.cpan.org/Dist/Display.html?Queue=MooX-ClassAttribute>
 Maintainer:   Toby Inkster <mailto:tobyink@cpan.org>
 
+0.002  2013-01-01
+
+ - (Packaging) List dependencies.
+
 0.001  2013-01-01  # Initial release
 
 
