--- a/Changes
+++ b/Changes
@@ -6,6 +6,10 @@ Home page:    <https://metacpan.org/release/MooX-ClassAttribute>
 Bug tracker:  <http://rt.cpan.org/Dist/Display.html?Queue=MooX-ClassAttribute>
 Maintainer:   Toby Inkster <mailto:tobyink@cpan.org>
 
+0.003  2013-01-03
+
+ - (Bugfix) Prevent MooX::CaptainHook from inadvertantly loading Moose.
+
 0.002  2013-01-01
 
  - (Packaging) List dependencies.
