--- a/Changes
+++ b/Changes
@@ -6,6 +6,11 @@ Home page:    <https://metacpan.org/release/MooX-ClassAttribute>
 Bug tracker:  <http://rt.cpan.org/Dist/Display.html?Queue=MooX-ClassAttribute>
 Maintainer:   Toby Inkster <mailto:tobyink@cpan.org>
 
+0.004  2013-01-03
+
+ - (Bugfix) Fix MooX::CaptainHook on_inflation fragility when Moose is
+   loaded early.
+
 0.003  2013-01-03
 
  - (Bugfix) Prevent MooX::CaptainHook from inadvertantly loading Moose.
