--- a/Changes
+++ b/Changes
@@ -6,6 +6,11 @@ Home page:    <https://metacpan.org/release/MooX-ClassAttribute>
 Bug tracker:  <http://rt.cpan.org/Dist/Display.html?Queue=MooX-ClassAttribute>
 Maintainer:   Toby Inkster <mailto:tobyink@cpan.org>
 
+0.005  2013-01-05
+
+ - (Bugfix) Avoid triggering Sub::Exporter::Progressive's dependency on
+   Sub::Exporter.
+
 0.004  2013-01-03
 
  - (Bugfix) Fix MooX::CaptainHook on_inflation fragility when Moose is
