--- a/README
+++ b/README
@@ -61,6 +61,8 @@ BUGS
     Please report any bugs to
     <http://rt.cpan.org/Dist/Display.html?Queue=MooX-ClassAttribute>.
 
+    See also: "CAVEATS" in Method::Generate::ClassAttribute.
+
 SEE ALSO
     Moo, MooseX::ClassAttribute.
 
