--- a/Changes
+++ b/Changes
@@ -4,46 +4,54 @@ MooX-ClassAttribute
 Created:      2012-12-27
 Home page:    <https://metacpan.org/release/MooX-ClassAttribute>
 Bug tracker:  <http://rt.cpan.org/Dist/Display.html?Queue=MooX-ClassAttribute>
-Maintainer:   Toby Inkster <mailto:tobyink@cpan.org>
+Maintainer:   Toby Inkster (TOBYINK) <tobyink@cpan.org>
 
-0.008  2013-07-10
+0.009	2013-08-27
+
+ - (Bugfix) Fix MooX::CaptainHook's `on_application` hook to work with
+   recent versions of Moo::Role/Role::Tiny which do not always call
+   `apply_single_role_to_package`.
+   Graham Knop++
+
+0.008	2013-07-10
 
  - (Bugfix) Support non-coderef defaults.
-   Fixes RT#87638
-   ++"Rob Bloodgood"
+   Fixes #87638.
+   Rob Bloodgood++
+   <https://rt.cpan.org/Ticket/Display.html?id=87638>
  - (Packaging) Switch to Dist::Inkt.
 
-0.007  2013-07-10
+0.007	2013-07-10
 
  - (Bugfix) Fixed error: Can't call method "isa" on an undefined value at
    MooX/CaptainHook.pm line 27.
-   Fixes RT#86828
-   ++$DREBOLO
+   Fixes #86828.
+   Dinis Rebolo++
+   <https://rt.cpan.org/Ticket/Display.html?id=86828>
  - (Documentation) Note incompatibility with Moo 1.001000.
 
-0.006  2013-01-11
+0.006	2013-01-11
 
  - (Bugfix) Avoid triggering an 'in cleanup' error on some older versions
    of Perl.
 
-0.005  2013-01-05
+0.005	2013-01-05
 
  - (Bugfix) Avoid triggering Sub::Exporter::Progressive's dependency on
    Sub::Exporter.
 
-0.004  2013-01-03
+0.004	2013-01-03
 
  - (Bugfix) Fix MooX::CaptainHook on_inflation fragility when Moose is
    loaded early.
 
-0.003  2013-01-03
+0.003	2013-01-03
 
  - (Bugfix) Prevent MooX::CaptainHook from inadvertantly loading Moose.
 
-0.002  2013-01-01
+0.002	2013-01-01
 
  - (Packaging) List dependencies.
 
-0.001  2013-01-01  Initial release
-
+0.001	2013-01-01	Initial release
 
