--- a/README
+++ b/README
@@ -60,7 +60,7 @@ BUGS
     Please report any bugs to
     <http://rt.cpan.org/Dist/Display.html?Queue=MooX-ClassAttribute>.
 
-    See also: "CAVEATS" in Method::Generate::ClassAttribute.
+    See also: "CAVEATS" in Method::Generate::ClassAccessor.
 
 SEE ALSO
     Moo, MooseX::ClassAttribute.
