Import of TOBYINK/MooX-ClassAttribute-0.011.tar.gz from CPAN.
gitpan-cpan-distribution: MooX-ClassAttribute
gitpan-cpan-version:      0.011
gitpan-cpan-path:         TOBYINK/MooX-ClassAttribute-0.011.tar.gz
gitpan-cpan-author:       TOBYINK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -6,6 +6,17 @@ Home page:    <https://metacpan.org/release/MooX-ClassAttribute>
 Bug tracker:  <http://rt.cpan.org/Dist/Display.html?Queue=MooX-ClassAttribute>
 Maintainer:   Toby Inkster (TOBYINK) <tobyink@cpan.org>
 
+0.011	2014-11-01
+
+ [ Packaging ]
+ - Don't make Moose/MooseX::ClassAttribute runtime recommendations or
+   development requirements.
+   Jim Bacon++
+   cPanel, Inc.++
+
+ [ Other ]
+ - Use Exporter::Shiny instead of Sub::Exporter::Progressive.
+
 0.010	2013-09-06
 
  [ Bug Fixes ]
